jump-to-note: Fix search bar not visible

--- a/src/modals/jump-to-note.less
+++ b/src/modals/jump-to-note.less
@@ -1,4 +1,8 @@
 .modal.jump-to-note-dialog {
+    .modal-header {
+        padding: 0 2em 0 0 !important;
+    }
+
     .modal-dialog {
         margin-top: 42px !important;
     }
@@ -7,9 +11,12 @@
         border: 1px solid var(--breeze-border) !important;
     }
 
-    .modal-header,
     label[for="jump-to-note-autocomplete"] {
         display: none;
+    }
+
+    .aa-suggestions {
+        padding: 0;
     }
 
     .modal-footer {
